--- a/app/src/main/res/layout/package_row.xml
+++ b/app/src/main/res/layout/package_row.xml
@@ -28,7 +28,7 @@
         android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
+        android:background="#f00"
         android:orientation="horizontal"
         android:tag="back"
         android:weightSum="3">
